--- a/index.html
+++ b/index.html
@@ -2,11 +2,25 @@
 <html lang="en">
 
 <head>
-    <title>Hello!</title>
+    <title>MY STORY</title>
 </head>
 
 <body>
-    <h1>Hello, World!</h1>
+    <h1>Huzaima Issa <br>
+    huzaimaissa04@gmail.com</h1>
+    <p>My name is Huzaima Issa am studying at SUZA(SOB), IT with Accounting. i love studying programming languages and this is html being taught by Mr.Masoud Mmanga. he is a good teacher i can understand the way he teaches and what's being taught benefits me. <br> it's all thanks to him for the lessons and inspirations he gives us. thanks soo much Mr.Masoud may Allah bless you </p>
+    <h2>This semester courses</h2>
+    <ol>
+        <li>Advanced WEB</li>
+        <li>Quickbook</li>
+        <li>Designs Studio</li>
+    </ol>
+    <h3>Programming languages</h3>
+    <ul>
+        <li>java</li>
+        <li>python</li>
+        <li>C++</li>
+    </ul>
 </body>
 
 </html>
